# nono_judge

./: Cargo.toml  README.md
examples/5x5/: 01.makhorin  02.makhorin
examples/8x8/: 01.makhorin
src/: base.rs  gen.rs  lib.rs  main.rs  solver.rs  tests.rs  util.rs
src/formats/: makhorin.rs  mod.rs
